<resources>
    <string name="app_name">Main Project</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_workouts_guide">Workouts_guide</string>
    <string name="title_activity_chest">chest</string>
    <string name="title_activity_push_ups">PushUps</string>
    <string name="step4">Lower yourself down until your chest is about an inch or two from the ground and then slowly push yourself back up to the starting position. Push through the heels of your hands in order to return to the starting position.</string>
    <string name="step3">Begin to bend your elbows, lowering your body in one solid piece down towards the floor. Your elbows will bend out to the side, not behind you. Keep your abdominal and leg muscles engaged throughout the entire movement. Your head should stay in line with your spine; not droop.</string>
    <string name="step2">Come onto the balls of your feet and the heels of your hands, and then walk the feet back until you\'re in the plank position. Keep your hips lifted to avoid the lower back bowing so the belly sags towards the ground.</string>
    <string name="step1">Begin on your hands and knees with your hands underneath your shoulders but slightly wider than your shoulders.</string>
    <string name="title_activity_bench_press">BenchPress</string>
    <string name="bench1">Lie on your back with your feet flat on the floor. If your feet don’t reach the floor, use a stable board to accommodate size. Grasp the barbell with a wider than shoulder-width grip, wrapping thumbs around the bar. Hold the barbell at arm’s length above your upper-chest area.</string>
    <string name="bench2">Slowly lower the barbell to the middle of your chest. In the bottom position the forearms should be perpendicular to the floor. Pause briefly, then press the barbell to the starting position. During the movement, the upper arms should be about 45 to 60 degrees from the torso and the hips should remain on the bench.</string>
    <string name="title_activity_back">Back</string>
    <string name="title_activity_pull_ups">PullUps</string>
    <string name="pullup4">Do another pullup. Once your arms are almost extended, start pulling up again. Repeat for as many reps as you can. If possible, do 3 sets of 10 reps.</string>
    <string name="pullup3">Lower yourself until your arms are almost fully extended. Lower yourself in a controlled way to work the muscles harder and prep yourself for the next pull.</string>

    <string name="pullup1">Grip a pullup bar with your palms facing out.  When you pull yourself up with your hands facing this way, you give your biceps and lats a great workout. Start with your arms almost fully extended.</string>
    <string name="pullup2">Pull your bodyweight up until your chin is slightly above the bar. You may have to strain, but keep pulling until you\'ve lifted yourself up using your back and biceps.</string>
    <string name="title_activity_lats_pulldown">LatsPulldown</string>
    <string name="lats1">Sit facint the machine and wedge your knees under the restrained pad provided. Take a very wide overhand grip on the bar.</string>
    <string name="lats2">Inhale and pull the bar down to your chest , arching your back and bringing your elbows back.</string>
    <string name="lats3">Exhale as you complete the movement.</string>
    <string name="title_activity_shoulders">Shoulders</string>
    <string name="title_activity_military__press">Military_Press</string>
    <string name="title_activity_front__raise">Front_Raise</string>
    <string name="military4">Repeat for the recommended amount of repetitions.</string>
    <string name="military3">Lower the bar down to the collarbone slowly as you inhale. Lift the bar back up to the starting position as you exhale.</string>
    <string name="military2">Once you pick up the barbell with the correct grip length, lift the bar up over your head by locking your arms. Hold at about shoulder level and slightly in front of your head. This is your starting position.</string>
    <string name="military1">Start by placing a barbell that is about chest high on a squat rack. Slightly bend the knees and place the barbell on your collar bone.</string>
    <string name="front1">Pick a couple of dumbbells and stand with a straight torso and the dumbbells on front of your thighs at arms length with the palms of the hand facing your thighs.</string>
    <string name="front2">While maintaining the torso stationary (no swinging), lift the left dumbbell to the front with a slight bend on the elbow and the palms of the hands always facing down. Continue to go up until you arm is slightly above parallel to the floor.</string>
    <string name="front3">Now lower the dumbbell back down slowly to the starting position as you simultaneously lift the right dumbbell. Continue alternating in this fashion until all of the recommended amount of repetitions have been performed for each arm.</string>
    <string name="title_activity_biceps">Biceps</string>
    <string name="title_activity_bicep__curls">Bicep_Curls</string>
    <string name="bcurls3">Then, inhale and slowly begin to lower the dumbbells back to the starting position. Repeat for the recommended amount of repetitions.</string>
    <string name="bcurls2">Now, keeping the upper arms stationary, exhale and curl the weights while contracting your biceps. Continue to raise the weights until your biceps are fully contracted and the dumbbells are at shoulder level.</string>
    <string name="bcurls1">Stand up straight with a dumbbell in each hand at arm\'s length. Keep your elbows close to your torso and rotate the palms of your hands until they are facing forward.</string>
    <string name="title_activity_hammer__curls">Hammer_Curls</string>
    <string name="hcurls3">After the brief pause, inhale and slowly begin the lower the dumbbells back down to the starting position. Repeat for the recommended amount of repetitions.</string>
    <string name="hcurls2">Now, while holding your upper arm stationary, exhale and curl the weight forward while contracting the biceps. Continue to raise the weight until the biceps are fully contracted and the dumbbell is at shoulder level. Hold the contracted position for a brief moment as you squeeze the biceps.</string>
    <string name="hcurls1">Stand up with your torso upright and a dumbbell on each hand being held at arms length. The elbows should be close to the torso. The palms of the hands should be facing your torso.</string>
    <string name="title_activity_abs">Abs</string>
    <string name="title_activity_crunches">Crunches</string>
    <string name="crunch3">Hold your elbows out to the sides but rounded slightly in. Tilt your chin slightly, leaving a few inches of space between your chin and your chest. Gently pull your abdominals inward.</string>
    <string name="crunch2">Hold your elbows out to the sides but rounded slightly in. Tilt your chin slightly, leaving a few inches of space between your chin and your chest. Gently pull your abdominals inward.</string>
    <string name="crunch1">Lie on your back with your knees bent and feet flat on the floor, hip-width apart. Place your hands behind your head so your thumbs are behind your ears.</string>
    <string name="title_activity_plank">Plank</string>
    <string name="plank1">Lie face down in a pushup position. Keep your palms on the floor next to your shoulders and your feet flexed with the bottoms of your toes on the floor.</string>
    <string name="plank2">Take a deep breath and press up into a pushup. Your body should make a straight line from your heels to the top of your head.</string>
    <string name="plank3">Draw your navel toward your spine and tighten your buttocks. Look at the floor to keep your head in neutral position and breathe normally. Draw your navel toward your spine and tighten your buttocks.</string>
    <string name="title_activity_incline">Incline</string>
    <string name="incline1">Lay on the bench with your feet flat on the ground, driving through to your hips. Your back should be arched, and your shoulder blades retracted.</string>
    <string name="incline2">Take a medium, pronated grip covering the rings on the bar. Remove the bar from the rack, holding the weight above your chest with your arms extended.</string>
    <string name="incline3">Lower the bar to the sternum by flexing the elbows. Maintain control and do not bounce the bar off of your chest.</string>
    <string name="incline4">After touching your torso with the bar, extend the elbows to return the bar to the starting position.</string>
    <string name="title_activity_dead_lift">DeadLift</string>
    <string name="dead1">Approach the bar so that it is centered over your feet. Your feet should be about hip-width apart. Bend at the hip to grip the bar at shoulder-width allowing your shoulder blades to protract.</string>
    <string name="dead2">With your feet and your grip set, take a big breath and then lower your hips and flex the knees until your shins contact the bar. Look forward with your head. Keep your chest up and your back arched, and begin driving through the heels to move the weight upward.</string>
    <string name="dead3">After the bar passes the knees aggressively pull the bar back, pulling your shoulder blades together as you drive your hips forward into the bar.</string>
    <string name="dead4">Lower the bar by bending at the hips and guiding it to the floor.</string>
    <string name="title_activity_upright__row">Upright_Row</string>
    <string name="upright1">Grasp a barbell with an overhand grip that is slightly less than shoulder width. The bar should be resting on the top of your thighs with your arms extended and a slight bend in your elbows.</string>
    <string name="upright2">Now exhale and use the sides of your shoulders to lift the bar, raising your elbows up and to the side. Keep the bar close to your body as you raise it. Continue to lift the bar until it nearly touches your chin.</string>
    <string name="upright3">Lower the bar back down slowly to the starting position. Inhale as you perform this portion of the movement.</string>
    <string name="upright4">Repeat for the recommended amount of repetitions.</string>
    <string name="title_activity_preacher__curls">Preacher_Curls</string>
    <string name="pre1">Grab the E-Z curl bar at the close inner handle. The palm of your hands should be facing forward and they should be slightly tilted inwards due to the shape of the bar.</string>
    <string name="pre2">With the upper arms positioned against the preacher bench pad and the chest against it, hold the E-Z Curl Bar at shoulder length.</string>
    <string name="pre3">As you breathe in, slowly lower the bar until your upper arm is extended and the biceps is fully stretched.</string>
    <string name="pre4">As you exhale, use the biceps to curl the weight up until your biceps is fully contracted and the bar is at shoulder height. Squeeze the biceps hard and hold this position for a second.</string>
    <string name="title_activity_mountain__climbers">Mountain_Climbers</string>
    <string name="mountain1">Begin in a pushup position, with your weight supported by your hands and toes. Flexing the knee and hip, bring one leg until the knee is approximately under the hip.</string>
    <string name="mountain2">Explosively reverse the positions of your legs, extending the bent leg until the leg is straight and supported by the toe, and bringing the other foot up with the hip and knee flexed.</string>
</resources>
